[project]
name = "pl"
version = "0.1.0"
description = "PL trend visualization from XBRL data"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "playwright>=1.52,<2",
]

[project.scripts]
pl-trends = "pl.pl_trends:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pl"]
